--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -18,7 +18,6 @@
             android:id="@+id/driverPassengerInfoRl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white_translucent"
             android:orientation="vertical"
             android:splitMotionEvents="false"
             android:visibility="visible">
@@ -26,7 +25,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@color/white_translucent">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerViewCustomersLinked"
