--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
@@ -11,7 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_margin="28px"
+        android:layout_marginLeft="28px"
+        android:layout_marginTop="28px"
+        android:layout_marginBottom="28px"
+        android:layout_marginRight="38px"
         android:orientation="vertical">
 
         <LinearLayout
