--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="@string/notifications"
+            android:text="@string/Notifications"
             android:textColor="@color/white"
             android:textSize="40px"/>
 
