--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_notification.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_notification.xml
@@ -11,25 +11,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/imageViewNotifCircle"
-            android:layout_width="68px"
-            android:layout_height="68px"
-            android:layout_marginLeft="25px"
-            android:layout_marginTop="25px"
-            android:src="@drawable/notifiaction_icon2"
-            android:tag="mwar"
-            />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32px"
+        android:layout_marginRight="32px">
 
 
         <LinearLayout
             android:id="@+id/linearLayoutText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25px"
-            android:layout_toRightOf="@+id/imageViewNotifCircle"
             android:orientation="vertical"
             >
 
@@ -38,11 +28,11 @@
                 android:id="@+id/textViewTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="30px"
+                android:layout_marginRight="12px"
                 android:layout_marginTop="20px"
                 android:text="Title"
                 android:textColor="@color/black"
-                android:textSize="32px"
+                android:textSize="34px"
                 />
 
 
@@ -51,8 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10px"
-                android:layout_marginRight="30px"
-                android:layout_marginTop="5px"
+                android:layout_marginRight="12px"
+                android:layout_marginTop="15px"
                 android:text="Hello"
                 android:textColor="@color/black"
                 android:textSize="28px"/>
@@ -90,11 +80,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginRight="30px"
-        android:layout_marginBottom="10px"
+        android:layout_marginRight="36px"
+        android:layout_marginBottom="15px"
         android:gravity="right"
         android:text="18 May, 2016"
-        android:textColor="@color/black"
+        android:textColor="@color/new_orange"
         android:textSize="24px"/>
 
 
