--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -187,7 +187,7 @@
             android:text="hello"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_size_30"
-            android:visibility="gone"
+            android:visibility="visible"
             />
 
 
@@ -198,7 +198,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15px"
             android:splitMotionEvents="false"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                 android:id="@+id/driverStartRideBtn"
@@ -259,6 +259,19 @@
                 android:splitMotionEvents="false"
                 android:visibility="visible"
                 >
+                <TextView
+                    android:id="@+id/textViewRideInstructionsInRide"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10px"
+                    android:gravity="center"
+                    android:padding="15px"
+                    android:text="hello"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/text_size_30"
+                    android:visibility="visible"
+                    />
+
 
                 <!-- reached distance km, time, fare layout -->
                 <LinearLayout
