--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_customer_brief_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_customer_brief_info.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/linearLayoutRoot"
               xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="300px"
-              android:layout_height="78px"
+              android:layout_width="360px"
+              android:layout_height="80px"
               android:gravity="center_vertical"
               android:orientation="horizontal"
     >
@@ -11,18 +11,19 @@
         android:id="@+id/passangerImage"
         android:layout_width="60px"
         android:layout_height="60px"
-        android:layout_marginLeft="25px"
-        android:layout_marginRight="25px"
+        android:layout_marginLeft="15px"
+        android:layout_marginRight="10px"
         android:src="@drawable/superhappy_face"
 
         />
 
     <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
         android:id="@+id/driverPassengerName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10px"
         android:text="Shanker"
         android:textColor="@color/bg_grey_opaque"
-        android:textSize="40px"/>
+        android:textSize="@dimen/text_size_34"/>
 
 </LinearLayout>
