--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_invoice_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_invoice_history.xml
@@ -53,9 +53,9 @@
                         android:layout_toRightOf="@+id/statusImage"
                         android:singleLine="true"
                         android:layout_marginLeft="10px"
-                        android:text="@string/status"
+                        android:text="@string/outstanding_amount"
                         android:textColor="@color/bg_grey_opaque"
-                        android:textSize="36px"/>
+                        android:textSize="34px"/>
 
                 </RelativeLayout>
 
@@ -74,7 +74,7 @@
 
                 <TextView
                     android:id="@+id/textViewInvoiceFare"
-                    android:layout_width="290px"
+                    android:layout_width="264px"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="20px"
@@ -84,7 +84,7 @@
                     android:singleLine="true"
                     android:text="@string/rupee_zero_zero"
                     android:textColor="@color/new_orange"
-                    android:textSize="55px"/>
+                    android:textSize="48px"/>
 
             </RelativeLayout>
 
