--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -187,7 +187,7 @@
             android:text="hello"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_size_30"
-            android:visibility="visible"
+            android:visibility="gone"
             />
 
 
@@ -269,7 +269,7 @@
                     android:text="hello"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/text_size_30"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     />
 
 
